# service-upload-music

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
